--- a/XToDo/XToDo-Info.plist
+++ b/XToDo/XToDo-Info.plist
@@ -31,6 +31,7 @@
 		<string>C4A681B0-4A26-480E-93EC-1218098B9AA0</string>
 		<string>A16FF353-8441-459E-A50C-B071F53F51B7</string>
 		<string>9F75337B-21B4-4ADC-B558-F9CADF7073A7</string>
+		<string>8DC44374-2B35-4C57-A6FE-2AD66A36AAD9</string>
 	</array>
 	<key>XC4Compatible</key>
 	<true/>
