--- a/XToDo/XToDo-Info.plist
+++ b/XToDo/XToDo-Info.plist
@@ -35,6 +35,7 @@
 		<string>E969541F-E6F9-4D25-8158-72DC3545A6C6</string>
 		<string>7FDF5C7A-131F-4ABB-9EDC-8C5F8F0B8A90</string>
 		<string>0420B86A-AA43-4792-9ED0-6FE0F2B16A13</string>
+		<string>7265231C-39B4-402C-89E1-16167C4CC990</string>
 	</array>
 	<key>XC4Compatible</key>
 	<true/>
